fix payout's vertical alignment

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -727,7 +727,7 @@
                 align-items: center;
                 margin-bottom: 10px;
 
-                &, .stake .contract_amount, .contract_payout {
+                &, .stake .payout .contract_amount, .contract_payout {
                     vertical-align: middle;
                 }
                 div {
